tests/ui/error-codes/E0001.stderr
error: unreachable pattern
  --> $DIR/E0001.rs:8:9
   |
LL |         _ => {/* ... */}
   |         ^^^^^^^^^^^^^^^^ this arm is never executed
   |
note: the lint level is defined here
  --> $DIR/E0001.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

